# ai-ml

./: LICENSE  LeNet-CIFAR10.ipynb  README.md  pyproject.toml
