[tool.poetry]
name = "ai-ml"
version = "0.1.0"
description = "Artificial Intelligence and Machine Learning"
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gym = "^0.26.2"
matplotlib = "^3.8.3"
nltk = "^3.8.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
seaborn = "^0.13.2"
spacy = "^3.7.4"
statsmodels = "^0.14.1"
jupyter = "^1.0.0"
wandb = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
